--- a/firethelaser2/app/src/main/AndroidManifest.xml
+++ b/firethelaser2/app/src/main/AndroidManifest.xml
@@ -8,7 +8,10 @@
         android:targetSdkVersion="8" />
     
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-	<uses-permission android:name="android.permission.INTERNET" /> 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+	<uses-permission android:name="android.permission.INTERNET" />
+    <uses-feature android:name="android.hardware.SensorManager" />
+    <uses-feature android:name="android.hardware.Sensor"/>
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -22,6 +25,10 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".CalibratingActivity"
+            android:screenOrientation="portrait">
         </activity>
     </application>
 
